--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -22,7 +22,7 @@
 }
 
 /* Style for the login form */
-.login-form {
+.login-form-local {
   background: rgba(0, 0, 0, 0.6);
   /* Semi-transparent background */
   padding: 2rem 3rem;
@@ -38,11 +38,9 @@
 }
 
 /* Modern form input styles */
-.login-form input {
+.login-form-local input {
   width: 100%;
   padding: 0.8rem;
-  margin: 1rem 0;
-  border: none;
   border-radius: 8px;
   background-color: #333;
   color: #fff;
@@ -51,24 +49,28 @@
   transition: background-color 0.3s ease;
 }
 
-.login-form input:focus {
+.login-form-local input:focus {
   background-color: #444;
   /* Slightly lighter background on focus */
 }
 
-.login-form label {
+.login-form-local label {
   font-weight: bold;
   display: block;
   margin-bottom: 0.5rem;
   color: #ddd;
 }
 
+.login-or-local{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 /* Submit button styles */
-.login-form button {
+.login-form-local button {
   width: 100%;
   padding: 0.8rem;
   background-color: #ff4c4c;
-  /* Bold red button */
   color: white;
   font-size: 1.1rem;
   border: none;
@@ -77,7 +79,7 @@
   transition: background-color 0.3s ease;
 }
 
-.login-form button:hover {
+.login-form-local button:hover {
   background-color: #e04444;
   /* Darker red when hovering */
 }
@@ -90,18 +92,17 @@
 }
 
 /* Style for the "No Account?" text and register link */
-.login-form div {
-  margin-top: 1rem;
+.login-form-local div {
   text-align: center;
 }
 
-.login-form a {
+.login-form-local a {
   color: #ff4c4c;
   text-decoration: none;
   font-weight: bold;
 }
 
-.login-form a:hover {
+.login-form-local a:hover {
   text-decoration: underline;
 }
 
